enum tipo_procedimento_enum {
  PROCEDIMENTO_A
  PROCEDIMENTO_B
  // Adicione outros valores conforme necessário
}

model Consulta {
  id                   Int                   @id @default(autoincrement())
  id_agendamento       Int                   @unique
  Agendamento          Agendamento           @relation(fields: [id_agendamento], references: [id])
  procedimento         tipo_procedimento_enum
  dt_entrada           DateTime              @default(now())
  dt_saida             DateTime?              
  status               String                @db.VarChar(50) @default("A")
  observacoes          String                
  Anamneses            Anamnese?
}

