model Prescricao {
  id                Int      @id @default(autoincrement())
  id_consulta       Int      @unique
  dt_prescricao     DateTime
  dieta             String?  @db.VarChar(500)
  decubito          String?  @db.VarChar(500)
  cuidados_especiais String? @db.VarChar(500)
  fisioterapia      String?  @db.VarChar(500)
  balanco_hidrico   Boolean?
  observacoes       String?  @db.VarChar(5000)

  Consulta          Consulta @relation(fields: [id_consulta], references: [id])
  Condutas          Conduta[]
}
