model Agendamento {
  id    Int                   @id @default(autoincrement())
  id_paciente         Int
  id_funcionario      String
  data_hora_agendamento    DateTime
  tipo_agendamento    TipoAgendamentoEnum
  status_agendamento  StatusAgendamentoEnum
  observacoes         String?

  Paciente            Paciente              @relation(fields: [id_paciente], references: [id])
  Usuario             User                  @relation(fields: [id_funcionario], references: [id])
  Consulta          Consulta?
}

enum StatusAgendamentoEnum {
  Agendado
  Confirmado
  Realizado
  Cancelado
  Reagendado 
}

enum TipoAgendamentoEnum {
  Consulta
  Exame
  Procedimento
}